--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ micronaut {
 }
 
 dependencies {
+    implementation("io.micronaut.xml:micronaut-jackson-xml:2.3.0")
+    implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-runtime")
     implementation("io.micronaut.grpc:micronaut-grpc-runtime")
     implementation("io.micronaut.kotlin:micronaut-kotlin-runtime")
