--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,18 @@
 micronaut:
   application:
     name: keyManager
+
+datasources:
+  default:
+    url: jdbc:mysql://localhost:3306/apidatabase?createDatabaseIfNotExist=true
+    username: root
+    password: root
+
+jpa:
+  default:
+    properties:
+      hibernate:
+
+        hbm2ddl:
+          auto: update
+        show_sql: true
